--- a/static/index.css
+++ b/static/index.css
@@ -42,8 +42,8 @@ header{height:60px;width:100%;background-color: white;
       "t9 t10 t11 t12";
       row-gap:150px;}
 
-.t {height:200px;width:280px;display:block;}
-.t img{width:100%;height:200px;object-fit:cover;
+.attraction {height:200px;width:280px;display:block;}
+.attraction img{width:100%;height:200px;object-fit:cover;
       position:relative;bottom:40%;z-index: -1;}
 
 .attraction_name{display:flex;align-items:center;
