--- a/templates/index.html
+++ b/templates/index.html
@@ -33,55 +33,57 @@
         <div class="mrt_list">這裡要放捷運站列表</div>
         
         <div class="main">           
-                    <div class="t t1">
+                    <div class="attraction t1">
                         <div class="attraction_name"></div>
                         <div class="attraction_info"></div>
                     </div>
-                    <div class="t t2">
+                    <div class="attraction t2">
                         <div class="attraction_name"></div>
                         <div class="attraction_info"></div>
                     </div>
-                    <div class="t t3">
+                    <div class="attraction t3">
                         <div class="attraction_name"></div>
                         <div class="attraction_info"></div>
                     </div>
-                    <div class="t t4">
+                    <div class="attraction t4">
                         <div class="attraction_name"></div>
                         <div class="attraction_info"></div>
                     </div>
-                    <div class="t t5">
+                    <div class="attraction t5">
                         <div class="attraction_name"></div>
                         <div class="attraction_info"></div>
                     </div>
-                    <div class="t t6">
+                    <div class="attraction t6">
                         <div class="attraction_name"></div>
                         <div class="attraction_info"></div>
                     </div>
-                    <div class="t t7">
+                    <div class="attraction t7">
                         <div class="attraction_name"></div>
                         <div class="attraction_info"></div>
                     </div>
-                    <div class="t t8">
+                    <div class="attraction t8">
                         <div class="attraction_name"></div>
                         <div class="attraction_info"></div>
                     </div>
-                    <div class="t t9">
+                    <div class="attraction t9">
                         <div class="attraction_name"></div>
                         <div class="attraction_info"></div>
                     </div>
-                    <div class="t t10">
+                    <div class="attraction t10">
                         <div class="attraction_name"></div>
                         <div class="attraction_info"></div>
                     </div>
-                    <div class="t t11">
+                    <div class="attraction t11">
                         <div class="attraction_name"></div>
                         <div class="attraction_info"></div>
                     </div>
-                    <div class="t t12">
+                    <div class="attraction t12">
                         <div class="attraction_name"></div>
                         <div class="attraction_info"></div>
                     </div>
         </div>
+
+       <div id="content">加載測試區</div>
 
         <footer> COPYRIGHT @ 2023台北一日遊 </footer>
     </div>
