--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,8 @@
             <div>輕鬆享受台北一日悠閒</div>
             <div class="banner_smalltext">探索每個角落，體驗城市的深度旅遊行程</div>
             <div class="search_container">
-            <input class="search_input" placeholder="輸入景點名稱查詢"></input>
-            <img class="search_button" src="../static/image/search_button.png"></img>
+            <input id="search_input" placeholder="輸入景點名稱查詢"></input>
+            <img id="search_button" src="../static/image/search_button.png"></img>
             </div>
         </div>
         
@@ -85,10 +85,15 @@
 
        <div id="content">加載測試區</div>
 
+       <button id="generateButton">生成Grid</button>
+       <div id="gridContainer"></div>
+   
+
         <footer> COPYRIGHT @ 2023台北一日遊 </footer>
     </div>
 </body>
 
 <script src="../static/index.js"></script>
+<script src="../static/index-roll.js"></script>
 
 </html>
