--- a/static/index.css
+++ b/static/index.css
@@ -4,26 +4,26 @@ body{font-family:"微軟正黑體";font-size:20px;
 .container{width:1200px;}
 
 header{height:60px;width:100%;background-color: white;
-      position:sticky;top:0; z-index:100;}
-.header_content{display:flex;justify-content:space-between;align-items:center;}
+      position:fixed;left:0;top:0; z-index:100;
+      display:flex;justify-content:center;}
+.header_content{width:1200px;display:flex;justify-content:space-between;align-items:center;}
 .header_LOGO{color:#458899;font-size:1.5rem;font-weight:bold;}
 .header_option{margin:10px;}
 
 .banner{background-image:url("./image/image_101.png");background-size:cover;
         width:100%;height:300px;
         position:absolute;left:0;z-index:-1;}
-.banner_content{
-      height:300px;color:white;font-weight:bold;
-      position:relative;top: 100px;}
+.banner_content{color:white;font-weight:bold;padding-bottom:200px ;
+                position:relative;top: 100px;}
 .banner_smalltext{font-size:1rem;line-height:30px;}
 
 .search_container{display:flex; margin-top:20px;}
-.search_input{font-weight:bold; border:none; padding: 10px 10px;}
+#search_input{font-weight:bold; border:none; padding: 10px 10px;}
 
 .mrt_list{height:50px;display:flex;align-items:center;width: 100%;}
 
-.t1 {grid-area:t1;}
-.t2 {grid-area:t2;}
+
+/* .t2 {grid-area:t2;}
 .t3 {grid-area:t3;}
 .t4 {grid-area:t4;}
 .t5 {grid-area:t5;}
@@ -33,31 +33,36 @@ header{height:60px;width:100%;background-color: white;
 .t9 {grid-area:t9;}
 .t10 {grid-area:t10;}
 .t11 {grid-area:t11;}
-.t12 {grid-area:t12;}
+.t12 {grid-area:t12;} */
 
+.t {grid-area:t;}
 .main{display:grid;
       grid-template-areas:
-      "t1 t2 t3 t4"
-      "t5 t6 t7 t8"
-      "t9 t10 t11 t12";
-      row-gap:150px;}
+      "t t t t"
+      "t t t t"
+      "t t t t";
+      gap:20px;
+      grid-template-rows:1fr 1fr 1fr;
+      grid-template-columns:1fr 1fr 1fr 1fr ; }
 
-.attraction {height:200px;width:280px;display:block;}
-.attraction img{width:100%;height:200px;object-fit:cover;
-      position:relative;bottom:40%;z-index: -1;}
+.attraction
+.attraction img{width:100%;height:200px;object-fit:cover;}
+      /* position:relative;bottom:40%;z-index: -1; */
 
 .attraction_name{display:flex;align-items:center;
-      position:relative;top:85%;height:25%;
+      /* position:relative;top:85%;height:25%; */
+      line-height:50px;
       background-color: rgba(34, 33, 33, 0.683);
       color: white;font-weight:bold; }
 
 .attraction_info{border:1px solid #000;padding:0 10px;
-      position:relative;top:85%;height:25%;
+      /* position:relative;top:85%;height:25%; */
       display:flex;justify-content:space-between;align-items:center;
+      line-height:50px;
       }
 
 
-footer{width:100%;position:absolute;left:0;z-index:-1;
+footer{width:100%;position:relative;left:0;bottom:0;z-index:-1;
       height:100px;background-color: grey;color:white;
       display:flex;justify-content:center;align-items:center;
 }
