--- a/static/index.css
+++ b/static/index.css
@@ -1,7 +1,7 @@
 
 body{font-family:"微軟正黑體";font-size:20px;
       margin:0;display:flex;justify-content:center;}
-.container{width:1200px;}
+.container{width:1200px;display:flex;flex-direction: column;}
 
 header{height:60px;width:100%;background-color: white;
       position:fixed;left:0;top:0; z-index:100;
@@ -13,7 +13,7 @@ header{height:60px;width:100%;background-color: white;
 .banner{background-image:url("./image/image_101.png");background-size:cover;
         width:100%;height:300px;
         position:absolute;left:0;z-index:-1;}
-.banner_content{color:white;font-weight:bold;padding-bottom:200px ;
+.banner_content{color:white;font-weight:bold;
                 position:relative;top: 100px;}
 .banner_smalltext{font-size:1rem;line-height:30px;}
 
