--- a/static/index.css
+++ b/static/index.css
@@ -22,7 +22,6 @@ header{height:60px;width:100%;background-color: white;
 
 .mrt_list{height:50px;display:flex;align-items:center;width: 100%;}
 
-/* .t {grid-area:t;} */
 .main{margin:50px 0;
       display:grid;
       grid-template-areas:
@@ -39,7 +38,7 @@ header{height:60px;width:100%;background-color: white;
 
 .attraction_name{display:flex;align-items:center;
       /* position:relative;top:85%;height:25%; */
-      line-height:50px;
+      line-height:50px;padding-left:10px ;
       background-color: rgba(34, 33, 33, 0.683);
       color: white;font-weight:bold; }
 
