--- a/templates/index.html
+++ b/templates/index.html
@@ -39,16 +39,13 @@
         <br>
         <div class="mrt_list">這裡要放捷運站列表</div>
         <br>
-
-       <div id="content">加載測試區</div>
-       <br>
        <button id="generateButton">生成Grid</button>
        <br>
        <div id="gridContainer"></div>
        
        
        
-        <footer> COPYRIGHT @ 2023台北一日遊 </footer>
+        <footer id="footer"> COPYRIGHT @ 2023台北一日遊 </footer>
     </div>
 
     <script src="../static/index.js"></script>
