--- a/static/index.css
+++ b/static/index.css
@@ -22,7 +22,7 @@ header{height:60px;width:100%;background-color: white;
 
 .mrt_list{height:50px;display:flex;align-items:center;width: 100%;}
 
-.main{margin:50px 0;
+.main{margin:20px 0;
       display:grid;
       grid-template-areas:
       "t t t t"
@@ -36,17 +36,17 @@ header{height:60px;width:100%;background-color: white;
 .attraction img{width:100%;height:200px;object-fit:cover;}
       /* position:relative;bottom:40%;z-index: -1; */
 
-.attraction_name{display:flex;align-items:center;
-      /* position:relative;top:85%;height:25%; */
-      line-height:50px;padding-left:10px ;
+.attraction_name{
+      line-height:50px;
+      display:flex;align-items:center;
+      padding-left:10px;
       background-color: rgba(34, 33, 33, 0.683);
       color: white;font-weight:bold; }
 
-.attraction_info{border:1px solid #000;padding:0 10px;
-      /* position:relative;top:85%;height:25%; */
-      display:flex;justify-content:space-between;align-items:center;
+.attraction_info{
       line-height:50px;
-      }
+      display:flex;align-items:center;justify-content:space-between;
+      border:1px solid #000;padding:0 10px;}
 
 
 footer{width:100%;position:relative;left:0;bottom:0;z-index:-1;
