--- a/templates/index.html
+++ b/templates/index.html
@@ -8,16 +8,19 @@
 </head>
 <body>
 
-    <div class="container">
-        <header>
-        <div class="header_content">
-            <div class="header_LOGO">台北一日遊</div>
-            <div class="header_option">
-                <span>預定行程　</span>
-                <span>登入/註冊</span>
-            </div>
+
+    <header>
+    <div class="header_content">
+        <div class="header_LOGO">台北一日遊</div>
+        <div class="header_option">
+            <span>預定行程　</span>
+            <span>登入/註冊</span>
         </div>
-        </header>
+    </div>
+    </header>
+
+    <div class="container">
+    <div class="container_content">
 
 
         <div class="banner"></div>
@@ -29,23 +32,24 @@
             <img id="search_button" src="../static/image/search_button.png"></img>
             </div>
         </div>
-
-        <br><br><br><br><br><br><br>
         <br>
         <div class="scroll_container">
-            <button id="scroll_left">左</button>
-            <div class="list_container">
-            </div>
-            <button id="scroll_right">右</button>
+            <img id="scroll_left" src="../static/image/arrow_left.png"></img>
+            <div class="list_container"></div>
+            <img id="scroll_right" src="../static/image/arrow_right.png"></img>
         </div>
         <br>
         <div id="gridContainer"></div>
         <br>
-         <footer id="footer"> COPYRIGHT @ 2023台北一日遊 </footer>
+
+    </div>
     </div>
 
-    <script src="../static/index.js"></script>
+         <footer id="footer"> COPYRIGHT @ 2023台北一日遊  </footer>
+
 
 </body>
+
+<script src="../static/index.js"></script>
 
 </html>
