--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,8 @@
 
         <div class="banner"></div>
         <div class="banner_content">
-            <div>輕鬆享受台北一日悠閒</div>
-            <div class="banner_smalltext">探索每個角落，體驗城市的深度旅遊行程</div>
+            <div class="banner_bigtext">輕鬆享受台北一日悠閒</div>
+            <div>探索每個角落，體驗城市的深度旅遊行程</div>
             <div class="search_container">
             <input id="search_input" placeholder="輸入景點名稱查詢"></input>
             <img id="search_button" src="../static/image/search_button.png"></img>
