--- a/static/index.css
+++ b/static/index.css
@@ -24,7 +24,7 @@ footer{width:100%;height:100px;background-color: grey;color:white;
         position:absolute;left:0;z-index:-1;}
 .banner_content{color:white;font-weight:bold;
                 position:relative;top: 100px;}
-.banner_smalltext{font-size:10px;line-height:30px;}
+.banner_bigtext{font-size:1.5rem;margin-bottom:10px;}
 
 .search_container{display:flex; margin-top:20px;}
 #search_input{font-weight:bold; border:none; padding: 10px 10px;}
@@ -56,7 +56,7 @@ footer{width:100%;height:100px;background-color: grey;color:white;
 .attraction_info{
       line-height:50px;
       display:flex;align-items:center;justify-content:space-between;
-      border:1px solid #000;padding:0 10px;}
+      border:1px solid rgb(185, 185, 185);padding:0 10px;}
 
 
 @media screen and (max-width:1200px){
@@ -78,7 +78,7 @@ footer{width:100%;height:100px;background-color: grey;color:white;
       body{font-size:15px;}
       #gridContainer{display:flex;justify-content:center; flex-flow:column wrap;}
       .main{display:flex;justify-content:center; flex-flow:column wrap;}
-      .banner_smalltext{font-size:5px;}
+      .attraction{width:100%;}
 }
 
 
