--- a/static/index.css
+++ b/static/index.css
@@ -77,7 +77,7 @@ footer{width:100%;height:100px;background-color: grey;color:white;
 @media screen and (max-width:600px){
       body{font-size:15px;}
       #gridContainer{display:flex;justify-content:center; flex-flow:column wrap;}
-      .main{display:flex;justify-content:center; flex-flow:column wrap;}
+      .main{display:flex;justify-content:center; flex-flow:column wrap;max-width:100%;}
       .attraction{width:100%;}
 }
 
