--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -22,15 +22,12 @@
     <div class="container">
         <div class="attraction_box">
             <div class="attraction_picture">
-                <div id="slideshow-container">
-                    <img class="slide" src="https://www.fotobeginner.com/wp-content/uploads/2015/04/lake-sunset-2021-08-26-18-27-36-utc-1.jpg">
-                    <img class="slide" src="https://www.fotobeginner.com/wp-content/uploads/2015/02/landscape-9LHVGVJ-a.jpg">
-                    <img class="slide" src="https://d1hjkbq40fs2x4.cloudfront.net/2017-08-21/files/landscape-photography_1645.jpg">
+                <div id="picture_container"></div>
+                <div id="Btn-container">
+                    <img id="prevBtn" src="../static/image/arrow_left.png"></img>
+                    <img id="nextBtn" src="../static/image/arrow_right.png"></img>
                 </div>
                 <div id="dot-container"></div>
-                <button id="prevBtn">Previous</button>
-                <button id="nextBtn">Next</button>
-                  
             </div>
             <div class="attraction_content">
                 <div class="attraction_name">名字</div>
