--- a/static/attraction.css
+++ b/static/attraction.css
@@ -48,6 +48,28 @@ input[type="date"] { border:none; }
 
 hr {border-color:white;}
 
+@media screen and (max-width:1200px){
+    .container_content{width:100%;}
+    .main{max-width:60%;
+          display:grid;
+          grid-template-areas:
+          "t t"
+          "t t"
+          "t t"
+          "t t"
+          "t t"
+          "t t";
+          grid-template-columns:1fr 1fr;
+    }
+} 
+
+@media screen and (max-width:600px){
+    body{font-size:15px;}
+    #gridContainer{display:flex;justify-content:center; flex-flow:column wrap;}
+    .main{display:flex;justify-content:center; flex-flow:column wrap;max-width:100%;}
+    .attraction{width:100%;}
+}
+
 
 
 
