--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -40,10 +40,13 @@
                     <input type="date" id="date"><br>
 
                     <b>選擇時間：</b>
-                    <label class="time_button"><input  type="radio" name="time" id="morning" value="morning">上半天
-                    </label>
-                    <label class="time_button"><input  type="radio" name="time" id="afternoon" value="afternoon">下半天
-                    </label>
+                    
+                    <input type="radio" name="time" id="morning">
+                    <label class="time_button" for="morning">上半天</label>
+
+                    <input type="radio" name="time" id="afternoon">
+                    <label class="time_button" for="afternoon">下半天</label>
+                    
                     <br>
                 
                     <b>導覽費用：</b><span id="fee"></span><br>
