--- a/static/attraction.css
+++ b/static/attraction.css
@@ -42,41 +42,19 @@ footer{width:100%;height:100px;background-color: grey;color:white;
 .attraction_name{font-size:1.5rem;font-weight:bold;}
 .attraction_info{margin-bottom:20px;}
 
-input[type="date"] {border:none;}
+input[type="date"]{border:none;}
 
+input[type="radio"]{display:none;}
 
-/* 隐藏默认的单选按钮 */
-input[type="radio"] {
-    display: none;
-  }
-  
-/* 自定义单选按钮的外观 */
-.time_button {
-position: relative;
-padding-left: 30px; /* 为了给自定义的按钮留出空间 */
-cursor: pointer;
-}
+.time_button {position:relative;padding-left:30px;cursor:pointer;}
+.time_button::before{
+    content: "";border-radius: 50%; 
+    position: absolute;left:0;top:0;width:20px;height: 20px;
+    border: 3px solid white;background-color:white;}
 
-/* 创建自定义按钮的外观 */
-.time_button::before {
-content: "";
-position: absolute;
-left: 0;
-top: 0;
-width: 20px;
-height: 20px;
-border: 2px solid #000; /* 自定义按钮的边框颜色 */
-border-radius: 50%; /* 创建圆形按钮 */
-background-color: blue; /* 未选中时的背景颜色 */
-}
-
-/* 当单选按钮被选中时，更改自定义按钮的颜色 */
 input[type="radio"]:checked + .time_button::before {
-background-color:red; /* 选中时的背景颜色 */
-border-color: red; /* 选中时的边框颜色 */
+    background-color:#458899; 
 }
-
-  
 
 .book_button{
     font-family:"微軟正黑體";font-size:20px;color: white;
@@ -91,8 +69,6 @@ hr {border-color:white;}
     .attraction_picture{width: 95%;}
     .attraction_content{width: 98%;}
     .attraction_description{padding:10px;}
-
-
 } 
 
 @media screen and (max-width:600px){
