--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -37,7 +37,8 @@
                     以此景點為中心的一日行程，帶您探索城市角落故事<br>
 
                     <b>選擇日期：</b>
-                    <input type="date" id="date"><br>
+
+                    <input type="date"><br>
 
                     <b>選擇時間：</b>
                     
