--- a/static/attraction.css
+++ b/static/attraction.css
@@ -4,7 +4,7 @@ body{font-family:"微軟正黑體";font-size:20px;
 header{height:60px;width:100%;background-color: white;
     position:fixed;left:0;top:0; z-index:100;
     display:flex;justify-content:center;
-    font-weight:bold;
+    font-weight:bold;border-bottom: 1px solid rgb(228, 228, 228)
 }
 .header_content{width:1200px;padding:10px;
     display:flex;justify-content:space-between;align-items:center;}
@@ -24,7 +24,7 @@ footer{width:100%;height:100px;background-color: grey;color:white;
 
 .attraction_picture{position:relative;width:580px;}
 #picture_container {position:absolute;width:100%;z-index:-1;}
-#picture_container img {width:100%;height:400px;object-fit:cover;
+#picture_container img {width:100%;height:400px;object-fit:cover;border-radius:5px
 }
 
 #Btn-container{display:flex;justify-content:space-between;margin:200px 5px auto 25px;}
@@ -42,8 +42,7 @@ footer{width:100%;height:100px;background-color: grey;color:white;
 .attraction_name{font-size:1.5rem;font-weight:bold;}
 .attraction_info{margin-bottom:20px;}
 
-input[type="date"]{border:none;}
-
+input[type="date"]{border:none; padding:7px;width:180px;}
 input[type="radio"]{display:none;}
 
 .time_button {position:relative;padding-left:30px;cursor:pointer;}
@@ -61,7 +60,7 @@ input[type="radio"]:checked + .time_button::before {
     border:none;border-radius: 5px;padding:10px 25px;margin:10px;
     background-color:#458899;font-weight:bold;}
 
-hr {border-color:white;}
+hr {border: 1.5px solid rgb(228, 228, 228)}
 
 @media screen and (max-width:1200px){
     .container{width:90%;}
@@ -73,11 +72,15 @@ hr {border-color:white;}
 
 @media screen and (max-width:600px){
     body{font-size:15px;}
-    #gridContainer{display:flex;justify-content:center; flex-flow:column wrap;}
-    .main{display:flex;justify-content:center; flex-flow:column wrap;max-width:100%;}
     .attraction{width:100%;}
+    .header_LOGO{font-size:1.5rem;}
 }
 
 
 
 
+
+
+
+
+  
