--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -27,7 +27,7 @@
                     <img id="prevBtn" src="../static/image/arrow_left.png"></img>
                     <img id="nextBtn" src="../static/image/arrow_right.png"></img>
                 </div>
-                <div id="dot-container"></div>
+                <div id="dot_container"></div>
             </div>
             <div class="attraction_content">
                 <div class="attraction_name">名字</div>
@@ -35,23 +35,15 @@
                 <div class="attraction_book">
                     <b>訂購導覽行程</b><br>
                     以此景點為中心的一日行程，帶您探索城市角落故事<br>
-
                     <b>選擇日期：</b>
-
                     <input type="date"><br>
-
                     <b>選擇時間：</b>
-                    
                     <input type="radio" name="time" id="morning">
                     <label class="time_button" for="morning">上半天</label>
-
                     <input type="radio" name="time" id="afternoon">
                     <label class="time_button" for="afternoon">下半天</label>
-                    
                     <br>
-                
                     <b>導覽費用：</b><span id="fee"></span><br>
-
                     <button class="book_button">開始預約行程</button>
                 </div>
             </div>
