--- a/static/attraction.css
+++ b/static/attraction.css
@@ -28,7 +28,7 @@ footer{width:100%;height:100px;background-color: grey;color:white;
 }
 
 #Btn-container{display:flex;justify-content:space-between;margin:200px 5px auto 25px;}
-#dot-container{display:flex;justify-content:center;margin-top:140px;}
+#dot_container{display:flex;justify-content:center;margin-top:140px;}
 
 .dot {display: inline-block;width: 10px;height: 10px;
   margin: 0 5px;background-color: #bbb;border-radius: 50%;
@@ -36,6 +36,9 @@ footer{width:100%;height:100px;background-color: grey;color:white;
 }
 .dot.active {background-color: #333;}
 .slide {display: none; width: 100%;}
+
+
+
 
 .attraction_content {width:600px;line-height: 40px;}
 .attraction_book{border-radius: 5px;padding:20px;background-color: rgb(231, 230, 230);}
