--- a/static/attraction.css
+++ b/static/attraction.css
@@ -1,4 +1,4 @@
-body{font-family:"微軟正黑體";font-size:20px;
+body{font-family:"微軟正黑體";font-size:15px;
     color:rgb(120, 116, 116);margin:0;}
 
 header{height:60px;width:100%;background-color: white;
@@ -8,7 +8,7 @@ header{height:60px;width:100%;background-color: white;
 }
 .header_content{width:1200px;padding:10px;
     display:flex;justify-content:space-between;align-items:center;}
-.header_LOGO{color:#458899;font-size:2rem;}
+.header_LOGO{color:#458899;font-size:1.5rem;}
 
 
 footer{width:100%;height:100px;background-color: grey;color:white;
@@ -17,17 +17,18 @@ footer{width:100%;height:100px;background-color: grey;color:white;
     font-weight:bold;
 }
 
+
+
 .container{width:1200px;margin:70px auto 10px auto}
 
-.attraction_box{display:flex;justify-content:space-between;margin:0 auto;}
-.attraction_box div{margin:10px;}
+.attraction_box{display:flex;justify-content:space-between;}
 
 .attraction_picture{position:relative;width:580px;}
 #picture_container {position:absolute;width:100%;z-index:-1;}
 #picture_container img {width:100%;height:400px;object-fit:cover;border-radius:5px
 }
 
-#Btn-container{display:flex;justify-content:space-between;margin:200px 5px auto 25px;}
+#Btn-container{display:flex;justify-content:space-between;margin:200px 5px auto 5px;}
 #dot_container{display:flex;justify-content:center;margin-top:140px;}
 
 .dot {display: inline-block;width: 10px;height: 10px;
@@ -43,7 +44,7 @@ footer{width:100%;height:100px;background-color: grey;color:white;
 .attraction_content {width:600px;line-height: 40px;}
 .attraction_book{border-radius: 5px;padding:20px;background-color: rgb(231, 230, 230);}
 .attraction_name{font-size:1.5rem;font-weight:bold;}
-.attraction_info{margin-bottom:20px;}
+.attraction_info{margin-bottom:10px;}
 
 input[type="date"]{border:none; padding:7px;width:180px;}
 input[type="radio"]{display:none;}
@@ -63,20 +64,20 @@ input[type="radio"]:checked + .time_button::before {
     border:none;border-radius: 5px;padding:10px 25px;margin:10px;
     background-color:#458899;font-weight:bold;}
 
-hr {border: 1.5px solid rgb(228, 228, 228)}
+hr {border: 1px solid rgb(228, 228, 228)}
+
 
 @media screen and (max-width:1200px){
     .container{width:90%;}
-    .attraction_box{display:flex;flex-flow:column wrap;}
-    .attraction_picture{width: 95%;}
-    .attraction_content{width: 98%;}
-    .attraction_description{padding:10px;}
+    .attraction_box{display:flex;justify-content:center;flex-flow:column wrap;}
+    .attraction_picture{position: absolute;top: 60px;left: 0;width: 100%;}
+    .attraction_content{margin: 400px auto 0 auto;}
+    #picture_container img {border-radius:0}
 } 
 
 @media screen and (max-width:600px){
-    body{font-size:15px;}
-    .attraction{width:100%;}
-    .header_LOGO{font-size:1.5rem;}
+    .attraction_content {width:100%;}
+    .attraction_content {width:100%;}
 }
 
 
