--- a/static/attraction.css
+++ b/static/attraction.css
@@ -4,8 +4,7 @@ body{font-family:"微軟正黑體";font-size:16px;
 header{height:54px;width:100%;background-color: #FFFFFF;
     position:fixed;left:0;top:0; z-index:100;
     display:flex;justify-content:center;
-    font-weight:bold;border-bottom: 1px solid #E8E8E8;
-}
+    font-weight:bold;border-bottom: 1px solid #E8E8E8;}
 .header_content{width:1200px;padding:10px;
     display:flex;justify-content:space-between;align-items:center;}
 .header_LOGO{color:#448899;font-size:30px;}
@@ -14,9 +13,7 @@ header{height:54px;width:100%;background-color: #FFFFFF;
 footer{width:100%;height:100px;background-color: #757575;color:white;
     position:relative;left:0;bottom:0;
     display:flex;justify-content:center;align-items:center;
-    font-weight:bold;
-}
-
+    font-weight:bold;}
 
 
 .container{width:1200px;margin:70px auto 10px auto}
@@ -25,29 +22,23 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
 
 .attraction_picture{position:relative;width:580px;}
 #picture_container {position:absolute;width:100%;z-index:-1;}
-#picture_container img {width:100%;height:400px;object-fit:cover;border-radius:5px
-}
+#picture_container img {width:100%;height:400px;object-fit:cover;border-radius:5px}
 
 #Btn-container{display:flex;justify-content:space-between;margin:200px 5px auto 5px;}
 #dot_container{display:flex;justify-content:center;margin-top:140px;}
 
-.dot {display: inline-block;width: 10px;height: 10px;
+.dot {display: inline-block;width:10px;height:10px;
   margin: 0 5px;background-color:#FFFFFF;border-radius: 50%;
-  cursor: pointer;
-}
+  cursor: pointer;}
 .dot.active {background-color:#000000;}
 .slide {display: none; width: 100%;}
 
-
-
-
 .attraction_content {width:600px;line-height: 40px;}
-.attraction_book{border-radius: 5px;padding:20px;background-color:#E8E8E8;
-}
+.attraction_book{border-radius: 5px;padding:20px;background-color:#E8E8E8;}
 .attraction_name{font-size:24px;font-weight:bold;}
 .attraction_info{margin-bottom:10px;}
 
-input[type="date"]{border:none; padding:7px;width:180px;}
+input[type="date"]{border:none; padding:7px;width:190px;}
 input[type="radio"]{display:none;}
 
 .time_button {position:relative;padding-left:30px;cursor:pointer;}
@@ -68,8 +59,6 @@ input[type="radio"]:checked + .time_button::before {
 hr {border-width: 0px 0px 1px 0px;
     border-color: #E8E8E8;
     border-style: solid;}
-  
-
 
 
 @media screen and (max-width:1200px){
