--- a/static/index.css
+++ b/static/index.css
@@ -23,7 +23,7 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
         width:100%;height:300px;
         position:absolute;left:0;z-index:-1;}
 .banner_content{color:#F8F8F8;font-weight:bold;
-                position:relative;top: 100px;}
+                position:relative;top:100px;}
 .banner_bigtext{font-size:28px;margin-bottom:10px;}
 
 .search_container{display:flex; margin-top:20px;}
@@ -49,13 +49,13 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
 .attraction img{width:100%;height:200px;object-fit:cover;display: block;
 }
 .attraction_name{
-      position: absolute;bottom:0;left: 0;right: 0;;z-index: 1;
+      position: absolute;bottom:0;left:0;right:0;z-index: 1;
       display:flex;align-items:center;
-      line-height:50px;padding-left:10px;
-      color: #FFFFFF;font-weight:bold;background-color: rgba(34, 33, 33, 0.683);
+      line-height:40px;padding-left:10px;
+      color: #FFFFFF;font-weight:bold;background-color:#000000;
  }
 .attraction_info{
-      line-height:50px;
+      line-height:40px;
       display:flex;align-items:center;justify-content:space-between;
       border:1px solid rgb(185, 185, 185);padding:0 10px;}
 
