--- a/static/attraction.css
+++ b/static/attraction.css
@@ -1,21 +1,3 @@
-body{font-family:"微軟正黑體";font-size:16px;
-    color:#666666;margin:0;}
-
-header{height:54px;width:100%;background-color: #FFFFFF;
-    position:fixed;left:0;top:0; z-index:100;
-    display:flex;justify-content:center;
-    font-weight:bold;border-bottom: 1px solid #E8E8E8;}
-.header_content{width:1200px;padding:10px;
-    display:flex;justify-content:space-between;align-items:center;}
-.header_LOGO{color:#448899;font-size:30px;}
-
-
-footer{width:100%;height:100px;background-color: #757575;color:white;
-    position:relative;left:0;bottom:0;
-    display:flex;justify-content:center;align-items:center;
-    font-weight:bold;}
-
-
 .container{width:1200px;margin:70px auto 10px auto}
 
 .attraction_box{display:flex;justify-content:space-between;}
@@ -33,7 +15,7 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
 .dot.active {background-color:#000000;}
 .slide {display: none; width: 100%;}
 
-.attraction_content {width:600px;line-height: 40px;}
+.attraction_content {width:600px;height:400px;line-height: 40px;}
 .attraction_book{border-radius: 5px;padding:20px;background-color:#E8E8E8;}
 .attraction_name{font-size:24px;font-weight:bold;}
 .attraction_info{margin-bottom:10px;}
@@ -52,9 +34,9 @@ input[type="radio"]:checked + .time_button::before {
 }
 
 .book_button{
-    font-family:"微軟正黑體";font-size:20px;color: white;
-    border:none;border-radius: 5px;padding:10px 25px;margin:10px;
-    background-color:#448899;font-weight:bold;}
+    font-size:19px;color: white;
+    border:none;border-radius: 5px;padding:10px 20px;margin:10px;
+    background-color:#448899;}
 
 hr {border-width: 0px 0px 1px 0px;
     border-color: #E8E8E8;
