--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>台北一日遊</title>
+    <link rel="stylesheet" type="text/css" href="../static/basic.css">
     <link rel="stylesheet" type="text/css" href="../static/attraction.css">
 </head>
 <body>
