--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <div class="container">
-    <div class="container_content">
+    <!-- <div class="container_content"> -->
 
 
         <div class="banner"></div>
@@ -43,7 +43,7 @@
         <div id="gridContainer"></div>
         <br>
 
-    </div>
+    <!-- </div> -->
     </div>
 
          <footer id="footer"> COPYRIGHT @ 2023台北一日遊  </footer>
