--- a/static/index.css
+++ b/static/index.css
@@ -1,7 +1,6 @@
 body{font-weight:bold;}
 
-.container{display:flex;justify-content:center;padding: 20px;}
-.container_content{width:1200px;}
+.container{width:1200px;margin:10px auto 10px auto}
 
 .banner{background-image:url("./image/image_101.png");background-size:cover;
         width:100%;height:300px;
@@ -45,7 +44,7 @@ body{font-weight:bold;}
 
 
 @media screen and (max-width:1200px){
-      .container_content{width:100%;}
+      .container{width:100%;}
       .main{max-width:60%;
             display:grid;
             grid-template-areas:
