--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
 
-
     <header>
     <div class="header_content">
         <div class="header_LOGO">台北一日遊</div>
@@ -21,8 +20,6 @@
     </header>
 
     <div class="container">
-    <!-- <div class="container_content"> -->
-
 
         <div class="banner"></div>
         <div class="banner_content">
@@ -39,11 +36,32 @@
             <div class="list_container"></div>
             <img id="scroll_right" src="../static/image/arrow_right.png"></img>
         </div>
+
+
+        <br>
+        <div>註冊會員帳號<br>
+            <input type="text" id="signUp_Name" placeholder="輸入姓名"><br>
+            <input type="text" id="signUp_Mail" placeholder="輸入電子信箱"><br>
+            <input type="text" id="signUp_Password" placeholder="輸入密碼"><br>
+            <button id="signUp_Button">註冊新帳戶</button></br>
+            <span>已經有新帳戶了？點此登入</span>
+        </div>
+
+        <div>登入會員帳號<br>
+            <input type="text" id="signIn_Mail" placeholder="輸入電子信箱"><br>
+            <input type="text" id="signIn_Password" placeholder="輸入密碼"><br>
+            <button id="signIn_Button">登入帳戶</button></br>
+            <span>還沒有帳戶？點此註冊</span>
+        </div>
+
+        <button id="test">測試按鈕</button></br>
+
+ 
+
         <br>
         <div id="gridContainer"></div>
         <br>
 
-    <!-- </div> -->
     </div>
 
          <footer id="footer"> COPYRIGHT @ 2023台北一日遊  </footer>
