--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,8 @@
             <span>還沒有帳戶？點此註冊</span>
         </div>
 
-        <button id="test">測試按鈕</button></br>
+        <button id="testA">會員資格</button></br>
+        <button id="testB">登出帳號</button></br>
 
  
 
