--- a/static/basic.css
+++ b/static/basic.css
@@ -17,3 +17,5 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
     display:flex;justify-content:center;align-items:center;
     font-weight:bold;
 }
+
+.hide{display:none}
