--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         <div class="header_LOGO">台北一日遊</div>
         <div class="header_option">
             <span>預定行程　</span>
-            <span class="loginCheck">登入/註冊</span>
+            <span class="loginButton">登入/註冊</span>
         </div>
     </div>
     </header>
@@ -39,28 +39,29 @@
 
 
         <br>
-        <div class="signUp_container hide" >註冊會員帳號<br>
+        <div class="signUp_container hide popup" >
+            註冊會員帳號
+            <span class="close">&times;</span><br>
             <input type="text" id="signUp_Name" placeholder="輸入姓名"><br>
             <input type="text" id="signUp_Mail" placeholder="輸入電子信箱"><br>
             <input type="text" id="signUp_Password" placeholder="輸入密碼"><br>
             <button id="signUp_Button">註冊新帳戶</button></br>
-            <span class="signUp_remind">已經有新帳戶了？</span>
+            <span class="signUp_remind">已經有帳戶了？</span>
             <span class="signUp_success hide">註冊成功！</span>
-            <span class="signUp_change">點此登入</span>
+            <span class="signUp_signIn">點此登入</span>
         </div>
+        <div class="overlay hide"></div>
 
-        <div class="signIn_container hide">登入會員帳號<br>
+        <div class="signIn_container hide popup">
+            登入會員帳號
+            <span class="close">&times;</span><br>
             <input type="text" id="signIn_Mail" placeholder="輸入電子信箱"><br>
             <input type="text" id="signIn_Password" placeholder="輸入密碼"><br>
             <button id="signIn_Button">登入帳戶</button></br>
             <span>還沒有帳戶？</span>
-            <span class="signIn_change">點此註冊</span>
+            <span class="signIn_signUp">點此註冊</span>
         </div>
-
-        <button id="testA">測試按鈕</button></br>
-        <button id="testB">登出帳號</button></br>
-
- 
+        <div class="overlay hide"></div>
 
         <br>
         <div id="gridContainer"></div>
