--- a/templates/index.html
+++ b/templates/index.html
@@ -40,26 +40,32 @@
 
         <br>
         <div class="signUp_container hide popup" >
-            註冊會員帳號
+            <div>
+            <span class="bigtext">註冊會員帳號</span>
             <span class="close">&times;</span><br>
+            </div>
             <input type="text" id="signUp_Name" placeholder="輸入姓名"><br>
             <input type="text" id="signUp_Mail" placeholder="輸入電子信箱"><br>
             <input type="text" id="signUp_Password" placeholder="輸入密碼"><br>
             <button id="signUp_Button">註冊新帳戶</button></br>
-            <span class="signUp_remind">已經有帳戶了？</span>
+            <div>已經有帳戶了？
             <span class="signUp_success hide">註冊成功！</span>
             <span class="signUp_signIn">點此登入</span>
+            </div>
         </div>
         <div class="overlay hide"></div>
 
         <div class="signIn_container hide popup">
-            登入會員帳號
+            <div>
+            <span class="bigtext">登入會員帳號</span>
             <span class="close">&times;</span><br>
+            </div>
             <input type="text" id="signIn_Mail" placeholder="輸入電子信箱"><br>
             <input type="text" id="signIn_Password" placeholder="輸入密碼"><br>
             <button id="signIn_Button">登入帳戶</button></br>
-            <span>還沒有帳戶？</span>
+            <div>還沒有帳戶？
             <span class="signIn_signUp">點此註冊</span>
+            </div>
         </div>
         <div class="overlay hide"></div>
 
