--- a/static/basic.css
+++ b/static/basic.css
@@ -22,7 +22,7 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
 
 
 .popup {
-    /* display: none; */
+    width: 340px;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -31,27 +31,54 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
     z-index: 1000;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius:6px;
+    border-top:#448899
 }
 
-.popup-content {
+.popup div {
+    width: 100%;
     text-align: center;
+    margin:5px auto;
+}
+.popup input {
+    width: 93%;
+    border: 1px solid #CCCCCC;
+    border-radius:3px;
+    padding: 10px 10px;
+    margin: 5px auto;
+}
+.popup button{
+    color: white;
+    border:none;border-radius: 5px;
+    padding:10px;
+    margin:5px auto;
+    background-color:#448899;
+    width: 100%;
+}
+
+.bigtext{
+    font-size:24px;
 }
 
 .close {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 20px;
+    left: 300px;
     font-size: 20px;
     cursor: pointer;
+    width: 30px;
+    height: 30px;
+    padding: 7px
 }
 
 .overlay {
-    /* display: none; */
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color:#000000;
+    opacity: 0.25;
     z-index: 999;
 }
+
