--- a/static/basic.css
+++ b/static/basic.css
@@ -19,6 +19,12 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
 }
 
 .hide{display:none;}
+.bigtext{
+    font-size:24px;
+}
+.signUp_success{
+    color: red;
+}
 
 
 .popup {
@@ -58,10 +64,6 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
     width: 100%;
     font-size: 16px;
     font-weight: bold;
-}
-
-.bigtext{
-    font-size:24px;
 }
 
 .close {
