--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="../static/attraction.css">
 </head>
 <body>
-
-
-    <header>
+    <div class="header_load"></div>
+    <div class="popup_load"></div>
+    <!-- <header>
     <div class="header_content">
         <div class="header_LOGO">台北一日遊</div>
         <div class="header_option">
@@ -18,8 +18,7 @@
             <span>登入/註冊</span>
         </div>
     </div>
-    </header>
-
+    </header> -->
     <div class="container">
         <div class="attraction_box">
             <div class="attraction_picture">
@@ -62,17 +61,14 @@
         <b>交通方式：</b><br>
         <div class="attraction_transport"></div>
         <br>
-
-
-
-
     </div>
     </div>
-
-    <footer id="footer"> COPYRIGHT @ 2023台北一日遊  </footer>
+    <div class="footer_load"></div>
+    <!-- <footer id="footer"> COPYRIGHT @ 2023台北一日遊  </footer> -->
 
 </body>
-
+<script src="../static/basic.js"></script>
+<script src="../static/member.js"></script>
 <script src="../static/attraction.js"></script>
 
 </html>
