--- a/templates/index.html
+++ b/templates/index.html
@@ -8,19 +8,9 @@
     <link rel="stylesheet" type="text/css" href="../static/index.css">
 </head>
 <body>
-
-    <header>
-    <div class="header_content">
-        <div class="header_LOGO">台北一日遊</div>
-        <div class="header_option">
-            <span>預定行程　</span>
-            <span class="loginButton">登入/註冊</span>
-        </div>
-    </div>
-    </header>
-
+    <div class="header_load"></div>
+    <div class="popup_load"></div>
     <div class="container">
-
         <div class="banner"></div>
         <div class="banner_content">
             <div class="banner_bigtext">輕鬆享受台北一日悠閒</div>
@@ -36,54 +26,16 @@
             <div class="list_container"></div>
             <img id="scroll_right" src="../static/image/arrow_right.png"></img>
         </div>
-
-
-        <br>
-        <div class="signUp_container hide popup" >
-            <div>
-            <span class="bigtext">註冊會員帳號</span>
-            <span class="close">&times;</span><br>
-            </div>
-            <input type="text" id="signUp_Name" placeholder="輸入姓名"><br>
-            <input type="text" id="signUp_Mail" placeholder="輸入電子信箱"><br>
-            <input type="text" id="signUp_Password" placeholder="輸入密碼"><br>
-            <button id="signUp_Button">註冊新帳戶</button></br>
-            <div>
-                <span class="signUp_remind">已經有帳戶了？</span>
-                <span class="signUp_success hide">註冊成功！</span>
-                <span class="signUp_signIn">點此登入</span>
-            </div>
-        </div>
-        <div class="overlay hide"></div>
-
-        <div class="signIn_container hide popup">
-            <div>
-                <span class="bigtext">登入會員帳號</span>
-                <span class="close">&times;</span><br>
-            </div>
-            <input type="text" id="signIn_Mail" placeholder="輸入電子信箱"><br>
-            <input type="text" id="signIn_Password" placeholder="輸入密碼"><br>
-            <button id="signIn_Button">登入帳戶</button></br>
-            <div>
-                <span class="signIn_remind">還沒有帳戶？</span>
-                <span class="signIn_message hide"></span>
-                <span class="signIn_signUp">點此註冊</span>
-            </div>
-        </div>
-        <div class="overlay hide"></div>
-
         <br>
         <div id="gridContainer"></div>
         <br>
-
     </div>
-
-         <footer id="footer"> COPYRIGHT @ 2023台北一日遊  </footer>
+         <div class="footer_load"></div>
 
 
 </body>
-
-<script src="../static/index.js"></script>
+<script src="../static/basic.js"></script>
 <script src="../static/member.js"></script>
+<script src="../static/index.js"></script>
 
 </html>
