--- a/static/basic.css
+++ b/static/basic.css
@@ -21,6 +21,7 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
 .hide{display:none;}
 .bigtext{
     font-size:24px;
+    /* font-weight:bold; */
 }
 .signUp_success{
     color: red;
@@ -30,7 +31,7 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
 .popup {
     width: 340px;
     position: fixed;
-    top: 50%;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
@@ -38,7 +39,8 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius:6px;
-    border-top:#448899
+    border-top:#448899;
+    font-weight:bold;
 }
 
 .popup div {
@@ -49,11 +51,11 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
 .popup input {
     width: 93%;
     border: 1px solid #CCCCCC;
-    border-radius:3px;
+    border-radius:5px;
     padding: 10px 10px;
     margin: 5px auto;
     font-size: 16px;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 .popup button{
     color: white;
@@ -63,7 +65,7 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
     background-color:#448899;
     width: 100%;
     font-size: 16px;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 .close {
@@ -85,3 +87,8 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
     z-index: 999;
 }
 
+@media screen and (max-width:600px){
+    .popup{
+        width:60%;
+    }
+}
