--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -27,7 +27,7 @@
                     <b>訂購導覽行程</b><br>
                     以此景點為中心的一日行程，帶您探索城市角落故事<br>
                     <b>選擇日期：</b>
-                    <input type="date"><br>
+                    <input class="booking_date" type="date"><br>
                     <b>選擇時間：</b>
                     <input type="radio" name="time" id="morning">
                     <label class="time_button" for="morning">上半天</label>
@@ -35,7 +35,7 @@
                     <label class="time_button" for="afternoon">下半天</label>
                     <br>
                     <b>導覽費用：</b><span id="fee"></span><br>
-                    <button class="book_button">開始預約行程</button>
+                    <button class="booking_button">開始預約行程</button>
                 </div>
             </div>
         </div>
@@ -58,5 +58,6 @@
 <script src="../static/js/basic.js"></script>
 <script src="../static/js/member.js"></script>
 <script src="../static/js/attraction.js"></script>
+<script src="../static/js/booking.js"></script>
 
 </html>
