--- a/static/css/attraction.css
+++ b/static/css/attraction.css
@@ -33,7 +33,7 @@ input[type="radio"]:checked + .time_button::before {
     background-color:#448899; 
 }
 
-.book_button{
+.booking_button{
     font-size:19px;color: white;
     border:none;border-radius: 5px;padding:10px 20px;margin:10px;
     background-color:#448899;}
