--- a/templates/booking.html
+++ b/templates/booking.html
@@ -12,7 +12,8 @@
     <div class="popup_load"></div>
     <div class="container">
 
-        <button class="test">測試按鈕</button>
+        <button class="test1">取得預定行程按鈕測試</button>
+        <button class="test2">刪除預定行程按鈕測試</button>
         <div>您好，名字，待預定的行程如下：</div>
         <div>這裡放圖</div>
         <div>台北一日遊：景點名稱</div>
