--- a/templates/booking.html
+++ b/templates/booking.html
@@ -12,27 +12,40 @@
     <div class="popup_load"></div>
     <div class="container">
 
-        <button class="test1">取得預定行程按鈕測試</button>
-        <button class="test2">刪除預定行程按鈕測試</button>
+        <button class="test1">取得行程按鈕</button><br>
+        <button class="test2">刪除行程按鈕</button><br>
+        <!-- <button class="test3">景點載入按鈕</button><br> -->
+
+
         <div>您好，名字，待預定的行程如下：</div>
-        <div>這裡放圖</div>
-        <div>台北一日遊：景點名稱</div>
+        
+        <img class="attraction_picture"></img>
+        <div class="attraction_name"></div>
         <div>
-            日期：<br>
-            時間：<br>
-            費用：<br>
-            地點：<br>
+            <span class="booking_date"></span><br>
+            <span class="booking_time"></span><br>
+            <span class="booking_price"></span><br>
+            <span class="booking_address"></span><br>
         </div>
 
         <br><hr><br>
-        <b>您的聯絡資訊：</b><br>
         <div class=""></div>
+        <b>您的聯絡資訊：</b><br>
+        聯絡姓名：<input><br>
+        聯絡信箱：<input><br>
+        手機號碼：<input><br>
+        <b>請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。</b>
 
         <br><hr><br>
-        <b>信用卡付款資訊：</b><br>
         <div class=""></div>
+        <b>信用卡付款資訊：</b><br>
+        卡片號碼：<input><br>
+        過期時間：<input><br>
+        驗證密碼：<input><br>
+
+        <br><hr><br>
+        <button class="booking_button">確認訂購並付款</button>
         <br>
-    </div>
     </div>
     <div class="footer_load"></div>
 
