--- a/static/css/basic.css
+++ b/static/css/basic.css
@@ -29,6 +29,19 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
 .signIn_message{
     color: red;
 }
+hr {border-width: 0px 0px 1px 0px;
+    border-color: #E8E8E8;
+    border-style: solid;}
+
+.booking_button{
+    font-size:19px;color: white;
+    border:none;border-radius: 5px;padding:10px 20px;margin:10px;
+    background-color:#448899;}
+
+
+
+
+
 
 
 .popup {
