--- a/templates/booking.html
+++ b/templates/booking.html
@@ -12,36 +12,36 @@
     <div class="popup_load"></div>
     <div class="container">
 
-        <button class="test1">取得行程按鈕</button><br>
-        <button class="test2">刪除行程按鈕</button><br>
-        <!-- <button class="test3">景點載入按鈕</button><br> -->
-
-
-        <div>您好，名字，待預定的行程如下：</div>
-        
-        <img class="attraction_picture"></img>
-        <div class="attraction_name"></div>
-        <div>
-            <span class="booking_date"></span><br>
-            <span class="booking_time"></span><br>
-            <span class="booking_price"></span><br>
-            <span class="booking_address"></span><br>
+        <div class="booking_hello">您好，名字，待預定的行程如下：</div>
+        <div class="booking_box">
+            <img class="attraction_picture"></img>
+            <div class="booking_info">
+                <b><div class="attraction_name"></div></b><br>
+                <b>日期：</b><span class="booking_date"></span><br>
+                <b>時間：</b><span class="booking_time"></span><br>
+                <b>費用：</b><span class="booking_price"></span><br>
+                <b>地點：</b><span class="booking_address"></span><br>
+            </div>
+            <img src="../static/image/delete.png" class="booking_delete"></img><br>
         </div>
 
+
         <br><hr><br>
-        <div class=""></div>
+        <div class="">
         <b>您的聯絡資訊：</b><br>
         聯絡姓名：<input><br>
         聯絡信箱：<input><br>
         手機號碼：<input><br>
         <b>請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。</b>
+        </div>
 
         <br><hr><br>
-        <div class=""></div>
+        <div class="">
         <b>信用卡付款資訊：</b><br>
         卡片號碼：<input><br>
         過期時間：<input><br>
         驗證密碼：<input><br>
+        </div>
 
         <br><hr><br>
         <button class="booking_button">確認訂購並付款</button>
