--- a/static/css/booking.css
+++ b/static/css/booking.css
@@ -1,1 +1,10 @@
-.container{width:1200px;margin:70px auto 10px auto}
+
+.container{width:1000px;margin:70px auto 10px auto}
+
+.booking_hello{margin:30px 0px;}
+.booking_box{display:flex;}
+.attraction_picture{width:250px;height:200px ;object-fit: cover}
+.attraction_name{color:#448899;}
+.booking_info{width:500px;padding: 10px 30px;}
+.booking_info span{line-height:30px}
+.booking_delete{width: 30px; height: 30px;}
