--- a/templates/booking.html
+++ b/templates/booking.html
@@ -12,7 +12,7 @@
     <div class="popup_load"></div>
     <div class="container">
 
-        <div class="booking_hello">您好，名字，待預定的行程如下：</div>
+        <div class="booking_hello">您好，<span class="helloMemberName"></span>，待預定的行程如下：</div>
         <div class="booking_box">
             <img class="attraction_picture"></img>
             <div class="booking_info">
@@ -29,8 +29,8 @@
         <br><hr><br>
         <div class="">
         <b>您的聯絡資訊：</b><br>
-        聯絡姓名：<input><br>
-        聯絡信箱：<input><br>
+        聯絡姓名：<input class="inputMemberName"><br>
+        聯絡信箱：<input class="inputMemberMail"><br>
         手機號碼：<input><br>
         <b>請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。</b>
         </div>
