--- a/templates/booking.html
+++ b/templates/booking.html
@@ -12,7 +12,7 @@
     <div class="popup_load"></div>
     <div class="container">
 
-        <div class="booking_hello">您好，<span class="helloMemberName"></span>，待預定的行程如下：</div>
+        <div class="booking_hello"><b>您好，<span class="helloMemberName"></span>，待預定的行程如下：</b></div>
         <div class="booking_box">
             <img class="attraction_picture"></img>
             <div class="booking_info">
@@ -27,24 +27,27 @@
 
 
         <br><hr><br>
-        <div class="">
-        <b>您的聯絡資訊：</b><br>
-        聯絡姓名：<input class="inputMemberName"><br>
-        聯絡信箱：<input class="inputMemberMail"><br>
-        手機號碼：<input><br>
+        <div class="member_info">
+        <div class="text19">您的聯絡資訊</div>
+        聯絡姓名：<input type="text" class="inputMemberName"><br>
+        聯絡信箱：<input type="text" class="inputMemberMail"><br>
+        手機號碼：<input type="text"><br>
         <b>請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。</b>
         </div>
 
         <br><hr><br>
-        <div class="">
-        <b>信用卡付款資訊：</b><br>
-        卡片號碼：<input><br>
-        過期時間：<input><br>
-        驗證密碼：<input><br>
+        <div class="member_info">
+        <div class="text19">信用卡付款資訊</div>
+        卡片號碼：<input type="text" placeholder="**** **** **** ****"><br>
+        過期時間：<input type="text" placeholder="MM/YY"><br>
+        驗證密碼：<input type="text" placeholder="CVV"><br>
         </div>
 
         <br><hr><br>
+        <div class="position_left">
+        <span class="bookingTotalPrice"><b>總價：</b></span><br>
         <button class="booking_button">確認訂購並付款</button>
+        </div>
         <br>
     </div>
     <div class="footer_load"></div>
