--- a/static/css/booking.css
+++ b/static/css/booking.css
@@ -2,9 +2,34 @@
 .container{width:1000px;margin:70px auto 10px auto}
 
 .booking_hello{margin:30px 0px;}
-.booking_box{display:flex;}
+.booking_box{display:flex;position: relative;}
 .attraction_picture{width:250px;height:200px ;object-fit: cover}
 .attraction_name{color:#448899;}
-.booking_info{width:500px;padding: 10px 30px;}
+.booking_info{padding: 10px 30px;}
 .booking_info span{line-height:30px}
-.booking_delete{width: 30px; height: 30px;}
+.booking_delete{width: 30px; height: 30px;position: absolute; right:0;}
+
+.text19{
+    font-size: 19px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.member_info input {
+    border: 1px solid #CCCCCC;
+    border-radius:5px;
+    padding: 10px 10px;
+    margin: 10px auto;
+    font-size: 16px;
+    width:200px;
+}
+
+.position_left{
+    display:flex;flex-direction: column;align-items: flex-end;
+}
+
+.booking_button{
+    width:173px;
+    font-size:19px;color: white;
+    border:none;border-radius: 5px;padding:10px 20px;
+    background-color:#448899;}
