--- a/templates/booking.html
+++ b/templates/booking.html
@@ -20,9 +20,9 @@
                 <b>日期：</b><span class="booking_date"></span><br>
                 <b>時間：</b><span class="booking_time"></span><br>
                 <b>費用：</b><span class="booking_price"></span><br>
-                <b>地點：</b><span class="booking_address"></span><br>
+                <b>地點：</b><span class="booking_address"></span><br><br>
+                <img src="../static/image/delete.png" class="booking_delete"></img><br>
             </div>
-            <img src="../static/image/delete.png" class="booking_delete"></img><br>
         </div>
 
 
