--- a/templates/booking.html
+++ b/templates/booking.html
@@ -45,7 +45,7 @@
 
         <br><hr><br>
         <div class="position_left">
-        <span class="bookingTotalPrice"><b>總價：</b></span><br>
+        <b><span class="bookingTotalPrice"></span></b><br>
         <button class="booking_button">確認訂購並付款</button>
         </div>
         <br>
