--- a/templates/booking.html
+++ b/templates/booking.html
@@ -12,7 +12,7 @@
     <div class="popup_load"></div>
     <div class="container">
 
-        <div class="booking_hello"><b>您好，<span class="helloMemberName"></span>，待預定的行程如下：</b></div>
+        <div class="booking_hello text19"><b>您好，<span class="helloMemberName"></span>，待預定的行程如下：</b></div>
         <div class="noBookingHide">
             <div class="booking_box">
                 <img class="attraction_picture"></img>
@@ -51,6 +51,7 @@
             </div>
             <br>
         </div>
+        <br>
         <div class="noBookingShow hide">目前沒有任何待預定的行程</div>
         <br>
     </div>
