--- a/templates/booking.html
+++ b/templates/booking.html
@@ -32,7 +32,7 @@
             <div class="text19">您的聯絡資訊</div>
             聯絡姓名：<input type="text" class="inputMemberName"><br>
             聯絡信箱：<input type="text" class="inputMemberMail"><br>
-            手機號碼：<input type="text"><br>
+            手機號碼：<input type="text" class="inputMemberPhone"><br>
             <b>請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。</b>
             </div>
 
